--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Magnus Bergquist. It uses data from mapbox.com and darksky.net</p>
         <img src="/img/cancer2.png" class="imgP" alt="Picture of Gem">
     </div>
     
