--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -12,7 +12,7 @@
     <div class="main-content">
         {{>header}}
         <p>This site was created by Magnus Bergquist. It uses data from mapbox.com and darksky.net</p>
-        <img src="/img/cancer2.png" class="imgP" alt="Picture of Gem">
+        <img src="public/img/cancer2.png" class="imgP" alt="Picture of Gem">
     </div>
     
     
